# bevy-unofficial-playground-experiments

./: README.md
bevy-builder/: .dockerignore  Containerfile  build.sh  entrypoint.sh  main.rs
bevy-builder/bevy-project/: Cargo.toml
bevy-builder/bevy-project/src/: main.rs  web.rs
bevy-playground-server/: Cargo.toml
bevy-playground-server/example/: compile.sh  example.rs
bevy-playground-server/src/: compile.rs  main.rs  middleware.rs  responses.rs
bevy-playground-server/templates/: playground.html
bevy-playground-website/: .gitignore  index.html  package.json  style.css
bevy-playground-website/src/: compile.ts  defaultSource.ts  main.js  main.module.css  main.ts  main.tsx  splitpane.css
