[package]
name = "bevy-playground"
version = "0.1.0"
edition = "2018"

[dependencies]
axum = { version = "0.3", features = ["headers"] }
tower = "0.4"
tower-http = { version = "0.1", features = ["fs", "set-header"] }
hyper = { version = "0.14", features = [] }
tokio = { version = "1.10", features = ["full"] }

