[package]
name = "bevy-project"
version = "0.1.0"
edition = "2018"

[dependencies]
bevy = { version = "0.5", default-features = false }
bevy_webgl2 = "0.5"

wasm-bindgen = { version = "0.2", default-features = false }
web-sys = { version = "0.3", default-features = false }
winit = { version = "0.24", default-features = false }
crossbeam-channel = "0.5"

[profile.dev.package."*"]
opt-level = 3