[package]
name = "bevy-project"
version = "0.1.0"
edition = "2018"
resolver = "2"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "pipelined-rendering", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_render2",
    # "bevy_pbr2", TODO: reenable once it is compatible with webgl
    "bevy_winit"
] }

wasm-bindgen = { version = "0.2", default-features = false }
web-sys = { version = "0.3", default-features = false }
winit = { version = "0.25", default-features = false }
crossbeam-channel = "0.5"

[profile.dev.package."*"]
opt-level = 3