[package]
name = "bevy-project"
version = "0.1.0"
edition = "2018"
resolver = "2"

[dependencies]
bevy = { version = "0.6", default-features = false, features = ["render", "bevy_winit"] }

wasm-bindgen = { version = "0.2", default-features = false }
web-sys = { version = "0.3", default-features = false }
winit = { version = "0.26", default-features = false }
crossbeam-channel = "0.5"

[profile.dev.package."*"]
opt-level = 3
